--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -243,11 +243,11 @@
 // ==============================
 // Background Cover
 // ==============================
-@mixin background-cover($image-url) {
+@mixin background-cover($default-banner-image) {
   position: relative;
   width: 100%;
   height: 100%;
-  background-image: url($image-url);
+  background-image: url($default-banner-image);
   background-size: cover;
   background-position: center;
 }
