--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -22,3 +22,6 @@ $secondary-color: #000000;
 $tertiary-color: #f6f6f6;
 $quaternary-color: white;
 $stars-background: #e3e3e3;
+// image par défaut visible sur les Banner
+// variables.scss
+$default-banner-image: "/assets/images/panorama.png"; // Chemin vers l'image par défaut
